[package]
name = "litcher"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
memory-rs = "0.2.5"
simplelog = "0.8"
termcolor = "1.1"
windows-sys = {version = "0.35", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_XboxController",
  "Win32_System_Console",
]}
simple_injector = { git = "https://github.com/etra0/simple_injector" }
hudhook = { path = "./vendor/hudhook/hudhook/" }
imgui-dx11 = { path = "./vendor/hudhook/imgui-dx11/" }
imgui-dx12 = { path = "./vendor/hudhook/imgui-dx12/" }
imgui = "0.8.2"
lazy-re = "0.1.1"
anyhow = "1.0.65"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "litcher"

[[bin]]
path = "src/main.rs"
name = "injector"
